# pmpp

./: .clangd  .gitignore  CMakeLists.txt  Project.toml  README.md  compile_commands.json  pyproject.toml
.clangd-cuda-shims/: texture_fetch_functions.h
chapter-02/: README.md
chapter-02/code/: Makefile  vecAdd.cu  vecAdd.jl  vecAdd.py  vecAddTorchTensor.cu  vecMulTorchTensor.cu
chapter-04/: README.md
chapter-04/code/: deviceProperties.cu
chapter-05/code/: Makefile  matmul_tiled_visualization.html  matrix_mul.cu  matrix_mul_benchmark.cu  matrix_mul_thread_tiling.cu  matrix_mul_with_optimal_dynamic_tile_size.cu  memory_example.cu  reduce_sum.cu  stream_example.cu
chapter-06/code/: excercise1.cu  thread_coaersing_matmul.cu
chapter-07/code/: conv2d_functions.cu  conv2d_functions_torch.cu  run_conv2d.cu
chapter-08/code/: benchmark.cu  stencil.cu
chapter-12/code/: merge.cu
chapter-13/code/: gpu_merge_sort.cu
chapter-14/code/: coo.cu  csr.cu  ell.cu  ell_coo_hybrid.cu  jds.cu
chapter-15/code/: bfs.cu
chapter-21/code/: quadtrees.cu
cuda-sgemm/: Makefile  README.md  kernels.cuh  main.cu  runner.cu  runner.cuh
cuda-sgemm/kernels/: 00_cublas.cuh  (+7 more)
cuda-stride/: Makefile  main.cu
example/: Makefile  cutlass_gemm_basic.cu  dynamic_parallelism.cu  tensor_core_matmul.cu
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  _merge.py  _step4.py  _step5.py  _step6.py  _step9.py  graph.html  graph.json
(+19 files in other folders)
